--- a/05 - Menjadi Front-End Web Developer Expert/submission/01 - restaurant-apps/package.json
+++ b/05 - Menjadi Front-End Web Developer Expert/submission/01 - restaurant-apps/package.json
@@ -28,14 +28,17 @@
     "http-server": "^14.1.1",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
     "style-loader": "^3.3.1",
-    "webpack": "^5.88.2",
+    "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0",
     "whatwg-fetch": "^3.6.2"
   },
   "dependencies": {
+    "jquery": "^3.7.1",
     "regenerator-runtime": "^0.14.0"
   }
 }
