--- a/05 - Menjadi Front-End Web Developer Expert/04 - Progressive Web Apps/02 - movie-catalogue/package.json
+++ b/05 - Menjadi Front-End Web Developer Expert/04 - Progressive Web Apps/02 - movie-catalogue/package.json
@@ -30,6 +30,7 @@
     "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
+    "idb": "^8.0.0",
     "regenerator-runtime": "^0.13.9",
     "workbox-window": "^7.0.0"
   }
