--- a/05 - Menjadi Front-End Web Developer Expert/06 - web performance/05 - lazy-loading-images/package.json
+++ b/05 - Menjadi Front-End Web Developer Expert/06 - web performance/05 - lazy-loading-images/package.json
@@ -11,11 +11,13 @@
   "author": "your_name <your_email@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "lazysizes": "^5.3.2"
   }
 }
