--- a/06 - Belajar Membuat Aplikasi Back-End untuk Pemula/02 - web service nodejs/03 - note-app-backend/package.json
+++ b/06 - Belajar Membuat Aplikasi Back-End untuk Pemula/02 - web service nodejs/03 - note-app-backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "api-test": "newman run ./notes-api.postman_collection.json --environment \"./notes api.postman_environment.json\""
   },
   "keywords": [],
   "author": "",
